feat: add AI backup provider fallback and speed up report page switch